# JTKJ-PicoRTOS-Project

./: CMakeLists.txt  tekoäly.txt  test.c
examples/hat_app/: CMakeLists.txt
examples/hat_app/src/: main.c
examples/hat_imu_ex/src/: main.c  main_copy.c
hat_app/: CMakeLists.txt
hat_app/src/: main.c
imu_sensori/: CMakeLists.txt  main.c
imu_sensori/src/: main.c
palautus (sessio 2)/: main.c  sdk.c
serial_client_master/: .gitignore  README.md  config.json
serial_client_master/src/: device_manager.py  main.py  morse.py  test_helper.py
src/: main.c
